# GenAI

./: Neo4j-d204918f-Created-2025-04-25.txt  Theory.txt  chat.py  chat_2.py  chat_3_auto.py  chat_gemini.py  mem.py  rag_1.py  requirements.txt  tokenization.py  weather_agent.py
LlamaIntegration/Llama_Project/: main.py  pyproject.toml
MCP/: MCP.js  package.json
UV_Project/: CheckPoint.py  CheckPoint1.py  docker-compose.graph.yml  langGraph.py  main.py  mem.py  pyproject.toml
UV_Talker/: docker-compose.yml  graph.py  main.py  pyproject.toml
