[project]
name = "uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.14",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.1",
    "langgraph-checkpoint-mongodb>=0.1.3",
    "langsmith>=0.3.32",
    "mem0ai>=0.1.93",
    "openai>=1.75.0",
    "pydantic>=2.11.3",
    "pymongo>=4.11.3",
    "pypdf>=5.4.0",
    "rank-bm25>=0.2.2",
    "typing>=3.10.0.0",
    "typing-extensions>=4.13.2",
]
