[project]
name = "uv-talker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "langgraph-checkpoint-mongodb>=0.1.3",
    "openai[voice-helpers]>=1.78.0",
    "pipwin>=0.5.2",
    "pyaudio>=0.2.14",
    "pymongo>=4.11.3",
    "sox>=1.5.0",
    "speechrecognition==2.1.3",
    "typing>=3.10.0.0",
    "typing-extensions>=4.13.2",
]
